<resources>
    <string name="app_name">AssignmentDemo</string>
    <string name="hint">Please input here</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="invalidEmail">Invalid Email Address</string>
</resources>